--- a/demo/index.html
+++ b/demo/index.html
@@ -3,7 +3,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
   </head>
-  <body style="background: #c7c7c7;">
+  <body style="background: #e8e8d3;">
     <main></main>
   <script type="text/javascript" src="main.js"></script></body>
 </html>
